Ticket #837 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

no wrapping in vlcrc and logfiles on Win32 (regression)

Reported by: trax Assigned to: courmisch
Priority: high Milestone: 0.9.0 bugs
Component: Interfaces Version: master
Severity: major Keywords:
Cc: courmisch Platform(s): Win32
Difficulty: unknown Work status: Not started

Description (Last modified by trax)

There is no line wrapping in the vlc-log.txt anymore which makes it harder to read with just plain "notepad". This used to work in 0.8.5.

This appears in trunk (tested against 20061114) not in 0.8.6 branch and is likely a unix/dos conversion issue.

Change History

11/14/06 03:26:21 changed by hartman

Are you sure? I just checked src/misc/logger.c all the way back to 0.8.2 and it has been using \n all that time. It has never used \r\n.

Though it could of course. I have no objections against such a thing.

11/14/06 08:38:10 changed by trax

  • description changed.
  • milestone changed from 0.8.6 to 0.9.0 bugs.

11/21/06 16:27:24 changed by md

  • priority changed from lowest to high.
  • severity changed from minor to major.

This is happening not only with logger, but also vlcrc is broken the same way. Seems before there was some function which was converting unix->dos on Win32 and it was probably removed.

11/21/06 16:28:10 changed by md

  • summary changed from no wrapping on win32 logfiles (regression) to no wrapping in vlcrc and logfiles on Win32 (regression).

01/05/07 12:37:09 changed by courmisch

Can anyone check if open+fdopen("at") works the same as fopen("at") as it is supposed to be? I suspect a bug in Windows CRT's fdopen().

01/05/07 13:31:16 changed by md

  • cc set to courmisch.

Are you not supposed to use open with O_TEXT ?

01/05/07 13:41:58 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

01/05/07 13:43:43 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [18512]) Fix CRLF on Win32 with utf8_fopen (thanks to Md) closes #837