Fix CRLF on Win32 with utf8_fopen (thanks to Md) closes #837